 - All: Fix fullscreen config option being ignored
 - GBA BIOS: Implement BitUnPack
 - GBA: Add savegame override for Crash Bandicoot 2
 - ARM7: PSR mode bits should not get sign extended
 - GBA: Only unhalt CPU if appropriate bit is set in IE
 - GBA Video: Fix out of bounds sprite transforms
 - GB: Fix crash when masking savedata
 - GB Audio: Fix serialization of channel 3 and NR52 properties
Misc:
 - SDL: Remove scancode key input
 - GBA Video: Clean up unused timers
 - Test: Add a basic test suite
 - GBA Video: Allow multiple handles into the same tile cache
 - VFS: Call msync when syncing mapped data
 - GBA Video, GB Video: Colors are now fully scaled
 - PSP2: Improved controller rumble
 - GB, GBA: Prevent loading null ROMs
 - VFS: Allow truncating memory chunk VFiles
 - Debugger: Modularize CLI debugger
 - Core: Clean up some thread state checks
 - Debugger: Make building with debugging aspects optional
 - GBA Memory: Support for Mo Jie Qi Bing by Vast Fame (taizou)
 - GBA Memory: Support reading/writing POSTFLG
 - Util: Add size counting to Table
 - Qt: Move last directory setting from qt.ini to config.ini
 - 3DS, PSP2, Wii: Last directory loaded is saved

0.5.1: (2016-10-05)
Bugfixes:
 - Core: Fix importing save games as read-only
 - FFmpeg: Fix encoding AAC
 - GB: Fix invalid STOP behavior on Game Boy Color
 - GB: Initialize audio properly
 - GB: Properly clear KEY1 bit 0 when switching speeds
 - GB: Properly unload save files when unloading a ROM
 - GB, GBA: Fix emulator hardlocking when halting with IRQs off
 - GB MBC: Fix MBC7 when size is incorrectly specified
 - GB MBC: Fix RTC access when no save file is loaded
 - GB SIO: Don't auto-clock external shift clock
 - GB Video: Setting LYC=LY during mode 2 should trigger an IRQ
 - GB Video: Fix video frames getting missed when LCDC is off
 - GB Video: Clear screen when LCDC is off
 - GBA Cheats: Fix holding onto pointers that may get invalidated
 - GBA Cheats: Fix key-activated CodeBreaker cheats